union of two sorted arrays